# gtest

project_1/: CMakeLists.txt
project_1/src/: main.cpp  multiplier.h  myFunction.h
project_1/test/: test.cpp  utest_add.cpp  utest_fixture.cpp
